build_log.txt
mkdir -p build pcaps logs results
p4c-bm2-ss --p4v 16 --p4runtime-files build/kbcs.p4.p4info.txt \
       -o build/kbcs.json p4src/kbcs.p4
p4src/ingress.p4(232): [--Werror=type-error] error: standard_metadata.enq_qdepth > meta.dyn_qdepth_thresh: not defined on bit<19> and bit<32>
                        (standard_metadata.enq_qdepth > meta.dyn_qdepth_thresh);
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
make: *** [Makefile:24: build] Error 1
mkdir -p build pcaps logs results
p4c-bm2-ss --p4v 16 --p4runtime-files build/kbcs_baseline.p4info.txt \
       -o build/kbcs_baseline.json p4src/kbcs_baseline.p4
[--Wwarn=deprecated] warning: .txt format is being deprecated; use .txtpb instead
>>> kbcs_baseline.p4 compiled → build/kbcs_baseline.json
  File "/home/p4/kbcs/run_experiment.py", line 135
    print(f"  {\"Jain's FI\":<22} {jain:>8.4f}")
                ^
SyntaxError: unexpected character after line continuation character
Traceback (most recent call last):
  File "/home/p4/kbcs/plot_results.py", line 20, in <module>
    import matplotlib
ModuleNotFoundError: No module named 'matplotlib'
